[package]
name = 'creditcoin-node'
description = 'A Creditcoin node built on substrate.'
build = 'build.rs'

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = 'creditcoin-node'

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
creditcoin-node-rpc = { version = "2.211.2", path = "./rpc" }
creditcoin-node-runtime = { workspace = true }
creditcoin-runtime-api = { workspace = true }
frame-benchmarking = { features = ["std"], workspace = true }
frame-benchmarking-cli = { workspace = true }
futures-lite = "1.12.0"
hex = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
num_cpus = "1.14.0"
pallet-transaction-payment-rpc = { workspace = true }
parity-scale-codec = { features = ["std"], workspace = true }
primitives = { workspace = true, features = ["prometheus"] }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-pow = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sha3pow = { path = '../sha3pow' }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { features = ["std"], workspace = true }
sp-inherents = { features = ["std"], workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { features = ["std"], workspace = true }
sp-runtime = { features = ["std"], workspace = true }
sp-timestamp = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
thiserror = "1.0.37"
try-runtime-cli = { workspace = true, optional = true }
jsonrpsee = { version = "0.15.1", features = ["server"] }
serde_json = "1.0.89"
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-keyring = { workspace = true }
futures = "0.3.25"

[dependencies.tokio]
version = "1.23.0"
default-features = false
features = ["time"]

[features]
default = ['std']
runtime-benchmarks = [
    'creditcoin-node-runtime/runtime-benchmarks',
    'frame-benchmarking/runtime-benchmarks',
    'frame-benchmarking-cli/runtime-benchmarks',
]
std = ['sp-api/std', 'sp-block-builder/std', 'creditcoin-runtime-api/std']
try-runtime = ["creditcoin-node-runtime/try-runtime", "try-runtime-cli"]
