[package]
name = 'creditcoin-node'
description = 'A Creditcoin node built on substrate.'
build = 'build.rs'

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = 'creditcoin-node'

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
creditcoin-node-rpc = { path = "./rpc" }
creditcoin-node-runtime = { workspace = true }
frame-benchmarking = { features = ["std"], workspace = true }
frame-benchmarking-cli = { workspace = true }
futures-lite = "2.3.0"
hex = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
num_cpus = "1.16.0"
pallet-transaction-payment-rpc = { workspace = true }
parity-scale-codec = { features = ["std"], workspace = true }
primitives = { workspace = true, features = ["prometheus"] }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-pow = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sha3pow = { path = '../sha3pow' }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { features = ["std"], workspace = true }
sp-inherents = { features = ["std"], workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { features = ["std"], workspace = true }
sp-runtime = { features = ["std"], workspace = true }
sp-timestamp = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
task-scheduler-runtime-api = { workspace = true }
thiserror = "1.0.64"
try-runtime-cli = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["server"] }
serde_json = "1.0.127"
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-io = { workspace = true, optional = true }
sp-keyring = { workspace = true }
futures = "0.3.30"
sc-consensus-babe = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus = { workspace = true }
sc-network = { workspace = true }
sc-consensus-slots = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-rpc = { workspace = true }
sp-session = { workspace = true }
sc-network-sync = { workspace = true }
serde = { workspace = true }
sc-chain-spec = { workspace = true }

[dependencies.tokio]
version = "1.40.0"
default-features = false
features = ["time"]

[features]
default = ['std']
runtime-benchmarks = [
    'creditcoin-node-runtime/runtime-benchmarks',
    'frame-benchmarking/runtime-benchmarks',
    'frame-benchmarking-cli/runtime-benchmarks',
]
std = [
    'sp-api/std',
    'sp-block-builder/std',
    'task-scheduler-runtime-api/std',
    'sp-session/std',
]
try-runtime = [
    "creditcoin-node-runtime/try-runtime",
    "try-runtime-cli/try-runtime",
    "sp-io",
]
fast-runtime = ["creditcoin-node-runtime/fast-runtime"]
