[package]
name = "primitives"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
sp-core = { workspace = true }
substrate-prometheus-endpoint = { optional = true, workspace = true }

[dev-dependencies]
tracing = { workspace = true }
rand = "0.8.5"
runtime-utils.workspace = true
tracing-test = { version = "0.2.1", git = "https://github.com/nathanwhit/tracing-test", branch = "main" }

[features]
default = ["std", "prometheus"]
std = ["sp-core/std"]
prometheus = ["substrate-prometheus-endpoint"]
