[package]
name = "primitives"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
sp-core = { workspace = true }
substrate-prometheus-endpoint = { optional = true, workspace = true }
num = { version = "0.4.0", default-features = false, features = [
    "num-bigint",
    "alloc",
] }
sp-arithmetic = { workspace = true }
sp-runtime-interface = { workspace = true }
parity-scale-codec = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }
proptest = "1.0.0"
rand = "0.8.5"
runtime-utils.workspace = true
tracing-test = { version = "0.2.1", git = "https://github.com/nathanwhit/tracing-test", branch = "main" }

[features]
default = ["std", "prometheus"]
std = ["sp-core/std", "sp-arithmetic/std"]
prometheus = ["substrate-prometheus-endpoint"]
