[package]
name = 'creditcoin-node-runtime'
version = '2.211.2'
description = 'Creditcoin runtime built on substrate.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
smallvec = "1.10.0"
creditcoin-runtime-api = { path = "../pallets/creditcoin/runtime-api", default-features = false }

[dependencies.primitives]
default-features = false
path = "../primitives"
version = "2.211.2"

[dependencies.pallet-rewards]
default-features = false
path = '../pallets/rewards'
version = '2.211.2'

[dependencies.pallet-difficulty]
default-features = false
path = '../pallets/difficulty'
version = '2.211.2'

[dependencies.pallet-creditcoin]
default-features = false
path = '../pallets/creditcoin'
version = '2.211.2'

[build-dependencies.substrate-wasm-builder]
git = "https://github.com/gluwa/substrate.git"
version = '5.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
version = '2.3.1'

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/gluwa/substrate.git"
optional = true
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-executive]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-support]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-system]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-system-benchmarking]
default-features = false
git = "https://github.com/gluwa/substrate.git"
optional = true
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-balances]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.pallet-sudo]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.pallet-transaction-payment]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-api]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-consensus-pow]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '0.10.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-core]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-session]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-std]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-version]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.pallet-scheduler]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies]
assert_matches = "1.5.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-creditcoin/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-rewards/runtime-benchmarks',
    'pallet-difficulty/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'parity-scale-codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-creditcoin/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-rewards/std',
    'pallet-difficulty/std',
    'pallet-scheduler/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-consensus-pow/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'creditcoin-runtime-api/std',
]
