[package]
name = 'creditcoin-node-runtime'
description = 'Creditcoin runtime built on substrate.'

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
creditcoin-runtime-api = { workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
hex-literal = { optional = true, workspace = true }
pallet-balances = { workspace = true }
pallet-creditcoin = { workspace = true }
pallet-difficulty = { workspace = true }
pallet-randomness-collective-flip = { workspace = true }
pallet-rewards = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
parity-scale-codec = { workspace = true }
primitives = { workspace = true }
scale-info = { workspace = true }
smallvec = "1.10.0"
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
sp-io = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-creditcoin/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-rewards/runtime-benchmarks',
    'pallet-difficulty/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'parity-scale-codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-creditcoin/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-rewards/std',
    'pallet-difficulty/std',
    'pallet-scheduler/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-consensus-pow/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'creditcoin-runtime-api/std',
]
