[package]
name = 'creditcoin-node-runtime'
description = 'Creditcoin runtime built on substrate.'

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-api = { workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { optional = true, workspace = true }
task-scheduler-runtime-api = { workspace = true }
pallet-balances = { workspace = true }
pallet-creditcoin = { workspace = true }
pallet-difficulty = { workspace = true }
pallet-offchain-task-scheduler = { workspace = true }
pallet-rewards = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-pos-switch = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
smallvec = "1.10.0"
sp-block-builder = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-consensus-babe = { workspace = true, default-features = false }
pallet-babe = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-staking-substrate = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-election-provider-multi-phase = { workspace = true }
pallet-im-online = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-authorship = { workspace = true }
sp-staking = { workspace = true }
pallet-staking-reward-fn = { workspace = true }
pallet-offences = { workspace = true }
log = { workspace = true }
sp-io = { workspace = true }

# Pallets necessary for use with the Staking Dashboard
# CSUB-503 https://gluwa.atlassian.net/browse/CSUB-503?atlOrigin=eyJpIjoiODY0NGFjOTkzZjE1NGFkYTg1OTNkZmYxZGU1NjlmYjIiLCJwIjoiaiJ9
pallet-utility = { workspace = true }
pallet-proxy = { workspace = true }
pallet-fast-unstake = { workspace = true }
pallet-identity = { workspace = true }
pallet-nomination-pools = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
sp-io = { workspace = true }
runtime-utils = { workspace = true, features = ["std"] }
pallet-offchain-task-scheduler = { workspace = true, features = [
    "mocked-task",
] }
tracing = { workspace = true }
traced-test = { workspace = true }

[features]
default = ['std']
# faster block time & epoch duration for NPoS
# WARNING: should be used only for testing purposes
fast-runtime = []
# uses 3x the number of blocks compared to fast-runtime only
# WARNING: should be used only for testing purposes
zombienet = []
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'pallet-creditcoin/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-rewards/runtime-benchmarks',
    'pallet-difficulty/runtime-benchmarks',
    'pallet-staking/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-offchain-task-scheduler/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    "frame-try-runtime?/std",
    'parity-scale-codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-creditcoin/std',
    'pallet-sudo/std',
    'pallet-rewards/std',
    'pallet-difficulty/std',
    'pallet-scheduler/std',
    'pallet-session/std',
    'pallet-staking/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-offchain-task-scheduler/std',
    'pallet-grandpa/std',
    'pallet-babe/std',
    'sp-consensus-babe/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-consensus-pow/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'task-scheduler-runtime-api/std',
    'pallet-staking-substrate/std',
    'frame-election-provider-support/std',
    'pallet-election-provider-multi-phase/std',
    'pallet-im-online/std',
    'pallet-bags-list/std',
    'pallet-authorship/std',
    'pallet-pos-switch/std',
    'pallet-utility/std',
    'pallet-proxy/std',
    'pallet-fast-unstake/std',
    'pallet-identity/std',
    'pallet-nomination-pools/std',
    'pallet-offences/std',
]
try-runtime = [
    "frame-try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-creditcoin/try-runtime",
    "pallet-difficulty/try-runtime",
    "pallet-offchain-task-scheduler/try-runtime",
    "pallet-rewards/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-staking/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-session/try-runtime",
    "pallet-staking-substrate/try-runtime",
    "frame-election-provider-support/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-pos-switch/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-bags-list/try-runtime",
    'pallet-utility/try-runtime',
    'pallet-proxy/try-runtime',
    'pallet-fast-unstake/try-runtime',
    'pallet-identity/try-runtime',
    'pallet-nomination-pools/try-runtime',
    'pallet-offences/try-runtime',
]
