[package]
name = "sha3pow"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec = { features = ["std"], workspace = true }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
sc-consensus-pow = { workspace = true }
sc-keystore = { workspace = true }
scale-info = { features = ["std"], workspace = true }
sha3 = "0.10.6"
sp-api = { workspace = true }
sp-consensus-pow = { features = ["std"], workspace = true }
sp-core = { features = ["std"], workspace = true }
pallet-difficulty = { workspace = true, features = ["std"] }

[dev-dependencies]
assert_matches = { workspace = true }
sp-runtime = { features = ["std"], workspace = true }
