[package]
name = "creditcoin-node-rpc"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
creditcoin-node-runtime = { workspace = true }
creditcoin-runtime-api = { workspace = true }
frame-system = { features = ["std"], workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
primitives = { workspace = true }
sc-rpc = { workspace = true }
serde = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { features = ["std"], workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
test-client = { path = "../../test/client" }

[features]
runtime-benchmarks = ['creditcoin-node-runtime/runtime-benchmarks']
