[package]
name = "creditcoin-node-rpc"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
creditcoin-node-runtime = { workspace = true }
creditcoin-runtime-api = { workspace = true }
frame-system = { features = ["std"], workspace = true }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
primitives = { workspace = true, features = ["prometheus"] }
sc-rpc = { workspace = true }
serde = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { features = ["std"], workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
test-client = { path = "../../test/client" }
tokio = { version = "1.22.0", features = ["full"] }


[features]
default = ["std"]
runtime-benchmarks = ["creditcoin-node-runtime/runtime-benchmarks"]
std = ["primitives/std"]
