[package]
name = "pallet-creditcoin"
description = 'FRAME pallet template for defining custom runtime logic.'

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
base58 = "0.2.0"
bitcoin-bech32 = { version = "0.12.1", git = "https://github.com/nathanwhit/rust-bech32-bitcoin", default-features = false, branch = "no-std" }
ethabi = { version = "18.0.0", features = ["rlp"], default-features = false }
ethereum-types = { version = "0.14.0", features = [
    "rlp",
    "serialize",
], default-features = false }
extend = "1.1.2"
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
itertools = { version = "~0.10", default-features = false }
lexical = { version = "6.1.1", features = [
    "write-integers",
], default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = [
    "hmac",
    "static-context",
] }
log = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true }
paste = "1.0.9"
scale-info = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0.89", features = [
    "alloc",
], default-features = false }
sha2 = { version = "0.10.6", default-features = false }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
strum = { version = "0.24.1", features = ["derive"], default-features = false }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
bstr = { version = "1.0.1", default-features = false }
parking_lot = "0.12.1"
sp-core = { workspace = true }
sp-keystore = { workspace = true }
tracing-test = { version = "0.2.1", git = "https://github.com/nathanwhit/tracing-test", branch = "main" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'parity-scale-codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'sp-core/std',
    'sp-std/std',
    'serde/std',
    'serde_json/std',
    'hex/std',
]
try-runtime = ['frame-support/try-runtime']
